# dissect-lm

./: .gitignore  Cargo.toml  README.md  architecture.md
python/: pyproject.toml
python/dissectlm/: __init__.py  inspector.py  tf_inspector.py  torch_inspector.py
python/dissectlm_python.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
scripts/: analyze.py
src/: lib.rs  main.rs  types.rs
src/analyzer/: classifier.rs  config.rs  mod.rs  param_counter.rs  safetensor.rs
src/cli/: args.rs  commands.rs
src/graph/: architecture.rs  layer_map.rs  mod.rs
src/hf/: download.rs  mod.rs  repo.rs
src/python_bridge/: runner.rs
src/report/: formatter.rs  json.rs  mod.rs  tui.rs
